apps/storage/syncthing/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: syncthing
  namespace: storage
  labels:
    app: syncthing
spec:
  replicas: 1
  selector:
    matchLabels:
      app: syncthing
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: syncthing
    spec:
      containers:
        - name: syncthing
          image: lscr.io/linuxserver/syncthing:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8384
            - name: sync-tcp
              containerPort: 22000
              protocol: TCP
            - name: sync-udp
              containerPort: 22000
              protocol: UDP
            - name: discovery
              containerPort: 21027
              protocol: UDP
          volumeMounts:
            - name: config
              mountPath: /config
            - name: data
              mountPath: /data1
          resources:
            # requests:
            #   memory: "256Mi"
            #   cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "1000m"
          livenessProbe:
            httpGet:
              path: /rest/noauth/health
              port: 8384
            initialDelaySeconds: 30
            periodSeconds: 10
            failureThreshold: 5
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: syncthing-config
        - name: data
          persistentVolumeClaim:
            claimName: syncthing-data
